Fixed issue where flames would overlap the text at larger width size

--- a/app/assets/stylesheets/components/homepage.scss
+++ b/app/assets/stylesheets/components/homepage.scss
@@ -88,6 +88,7 @@
     width: 100%;
     line-height: 2;
   }
+  z-index: 1;
 }
 
 .homepage-picture {
